# opengame-api

./: .gitignore  Cargo.toml
.github/workflows/: ci.yaml  docs.yaml  tests.yaml
.sqlx/: query-0edb08d1c78ec29e149bd921ee18335a24306c1222cae806619973e4797746ee.json  query-2487346f1ed40518d7942f83bccb1d63471375271620b55fa7a8b58314057b36.json  query-3b24ff4fdafff7461ba0ba56476410afc2947a52009a235354c2d448e19edd07.json  query-5731449ff4dc9d291c464429c9cf85787f104e0a75f4e3c542272ff39df2e313.json  query-89421dbb027a14eb2f8d6a222159b26cd5ab3b7854c476232b8ab859ac5dd728.json  query-d7987357bda7b9108a566e0bd0adff6fd04ea3c4011c4185b79ea6d9c51f07c6.json  query-dc345b2b664506c7b803dd5275985b2a9b46ec69a00adb0ac6df4c953f3c2a4a.json
docs/: index.html  openapi.json
migrations/: 20260307161313_create_users.sql  20260307184311_create_sessions.sql
scripts/: get.sh  get_me.sh  login.sh  logout.sh  logout_all.sh  register.sh
src/: app.rs  lib.rs
src/routes/: error_response.rs  mod.rs  status.rs
src/routes/auth/: login.rs  logout.rs  logout_all.rs  mod.rs  register.rs  status.rs
src/routes/status/: health.rs  mod.rs
src/routes/users/: get.rs  get_current.rs  mod.rs
src/storage/: mod.rs
src/storage/postgres/: mod.rs
src/storage/types/: mod.rs  session.rs  user.rs
tests/: generic_endpoints.rs  integration_test.rs  request_helpers.rs  user_flow_postgresql.rs
