[package]
name = "opengame-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
hyper = "1.8.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
tower = "0.5.3"
utoipa = "5.4.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
