[package]
name = "opengame-api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
axum = { version = "0.8.8", features = ["macros"] }
axum-extra = { version = "0.12.5", features = ["typed-header"] }
bcrypt = "0.19.0"
chrono = { version = "0.4.44", features = ["serde"] }
headers = "0.4.1"
hyper = "1.8.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["chrono", "postgres", "runtime-tokio", "uuid"] }
tokio = { version = "1.50.0", features = ["full"] }
tower = "0.5.3"
utoipa = "5.4.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
uuid = { version = "1.22.0", features = ["serde", "v4"] }
